Fix scrollbar styling

--- a/src/styles/scrollbar.less
+++ b/src/styles/scrollbar.less
@@ -1,6 +1,6 @@
 @import (reference) 'mixins.less';
 
-:root {
+* {
   --ironsworn-scrollbar-thumb-bg-color: var(--ironsworn-color-fg-50);
   --ironsworn-scrollbar-thumb-border-color: var(--ironsworn-color-warm-50);
   --ironsworn-scrollbar-thumb-border-width: 1px;
