--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -67,7 +67,7 @@
 
     .window-content {
       background: var(--ironsworn-color-bg);
-      padding: var(--ironsworn-spacer-md);
+      padding: var(--ironsworn-spacer-sm);
       height: 100%;
       color: var(--ironsworn-color-fg);
     }
